; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxr/extr_qlnxr_verbs.c_build_frmr_pbes.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxr/extr_qlnxr_verbs.c_build_frmr_pbes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qlnxr_dev = type { i32* }
%struct.ib_send_wr = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64* }
%struct.mr_info = type { %struct.qlnxr_pbl_info, %struct.qlnxr_pbl* }
%struct.qlnxr_pbl_info = type { i32, i32 }
%struct.qlnxr_pbl = type { i64 }
%struct.regpair = type { i8*, i8* }

@.str = private unnamed_addr constant [7 x i8] c"enter\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"exit\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qlnxr_dev*, %struct.ib_send_wr*, %struct.mr_info*)* @build_frmr_pbes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @build_frmr_pbes(%struct.qlnxr_dev* %0, %struct.ib_send_wr* %1, %struct.mr_info* %2) #0 {
  %4 = alloca %struct.qlnxr_dev*, align 8
  %5 = alloca %struct.ib_send_wr*, align 8
  %6 = alloca %struct.mr_info*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.regpair*, align 8
  %12 = alloca %struct.qlnxr_pbl*, align 8
  %13 = alloca %struct.qlnxr_pbl_info*, align 8
  %14 = alloca i32*, align 8
  store %struct.qlnxr_dev* %0, %struct.qlnxr_dev** %4, align 8
  store %struct.ib_send_wr* %1, %struct.ib_send_wr** %5, align 8
  store %struct.mr_info* %2, %struct.mr_info** %6, align 8
  store i64 0, i64* %8, align 8
  store i32 0, i32* %10, align 4
  %15 = load %struct.mr_info*, %struct.mr_info** %6, align 8
  %16 = getelementptr inbounds %struct.mr_info, %struct.mr_info* %15, i32 0, i32 1
  %17 = load %struct.qlnxr_pbl*, %struct.qlnxr_pbl** %16, align 8
  store %struct.qlnxr_pbl* %17, %struct.qlnxr_pbl** %12, align 8
  %18 = load %struct.mr_info*, %struct.mr_info** %6, align 8
  %19 = getelementptr inbounds %struct.mr_info, %struct.mr_info* %18, i32 0, i32 0
  store %struct.qlnxr_pbl_info* %19, %struct.qlnxr_pbl_info** %13, align 8
  %20 = load %struct.qlnxr_dev*, %struct.qlnxr_dev** %4, align 8
  %21 = getelementptr inbounds %struct.qlnxr_dev, %struct.qlnxr_dev* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  store i32* %22, i32** %14, align 8
  %23 = load i32*, i32** %14, align 8
  %24 = call i32 @QL_DPRINT12(i32* %23, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %25 = load %struct.qlnxr_pbl*, %struct.qlnxr_pbl** %12, align 8
  %26 = getelementptr inbounds %struct.qlnxr_pbl, %struct.qlnxr_pbl* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = inttoptr i64 %27 to %struct.regpair*
  store %struct.regpair* %28, %struct.regpair** %11, align 8
  store i32 0, i32* %9, align 4
  store i32 0, i32* %7, align 4
  br label %29

29:                                               ; preds = %89, %3
  %30 = load i32, i32* %7, align 4
  %31 = load %struct.ib_send_wr*, %struct.ib_send_wr** %5, align 8
  %32 = getelementptr inbounds %struct.ib_send_wr, %struct.ib_send_wr* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = icmp slt i32 %30, %35
  br i1 %36, label %37, label %92

37:                                               ; preds = %29
  %38 = load %struct.ib_send_wr*, %struct.ib_send_wr** %5, align 8
  %39 = getelementptr inbounds %struct.ib_send_wr, %struct.ib_send_wr* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 1
  %42 = load %struct.TYPE_4__*, %struct.TYPE_4__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %42, i32 0, i32 0
  %44 = load i64*, i64** %43, align 8
  %45 = load i32, i32* %7, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i64, i64* %44, i64 %46
  %48 = load i64, i64* %47, align 8
  store i64 %48, i64* %8, align 8
  %49 = load i64, i64* %8, align 8
  %50 = trunc i64 %49 to i32
  %51 = call i8* @cpu_to_le32(i32 %50)
  %52 = load %struct.regpair*, %struct.regpair** %11, align 8
  %53 = getelementptr inbounds %struct.regpair, %struct.regpair* %52, i32 0, i32 1
  store i8* %51, i8** %53, align 8
  %54 = load i64, i64* %8, align 8
  %55 = call i64 @upper_32_bits(i64 %54)
  %56 = trunc i64 %55 to i32
  %57 = call i8* @cpu_to_le32(i32 %56)
  %58 = load %struct.regpair*, %struct.regpair** %11, align 8
  %59 = getelementptr inbounds %struct.regpair, %struct.regpair* %58, i32 0, i32 0
  store i8* %57, i8** %59, align 8
  %60 = load i32, i32* %9, align 4
  %61 = add nsw i32 %60, 1
  store i32 %61, i32* %9, align 4
  %62 = load %struct.regpair*, %struct.regpair** %11, align 8
  %63 = getelementptr inbounds %struct.regpair, %struct.regpair* %62, i32 1
  store %struct.regpair* %63, %struct.regpair** %11, align 8
  %64 = load i32, i32* %10, align 4
  %65 = add nsw i32 %64, 1
  store i32 %65, i32* %10, align 4
  %66 = load i32, i32* %10, align 4
  %67 = load %struct.qlnxr_pbl_info*, %struct.qlnxr_pbl_info** %13, align 8
  %68 = getelementptr inbounds %struct.qlnxr_pbl_info, %struct.qlnxr_pbl_info* %67, i32 0, i32 0
  %69 = load i32, i32* %68, align 4
  %70 = icmp eq i32 %66, %69
  br i1 %70, label %71, label %72

71:                                               ; preds = %37
  br label %95

72:                                               ; preds = %37
  %73 = load i32, i32* %9, align 4
  %74 = sext i32 %73 to i64
  %75 = load %struct.qlnxr_pbl_info*, %struct.qlnxr_pbl_info** %13, align 8
  %76 = getelementptr inbounds %struct.qlnxr_pbl_info, %struct.qlnxr_pbl_info* %75, i32 0, i32 1
  %77 = load i32, i32* %76, align 4
  %78 = sext i32 %77 to i64
  %79 = udiv i64 %78, 8
  %80 = icmp eq i64 %74, %79
  br i1 %80, label %81, label %88

81:                                               ; preds = %72
  %82 = load %struct.qlnxr_pbl*, %struct.qlnxr_pbl** %12, align 8
  %83 = getelementptr inbounds %struct.qlnxr_pbl, %struct.qlnxr_pbl* %82, i32 1
  store %struct.qlnxr_pbl* %83, %struct.qlnxr_pbl** %12, align 8
  %84 = load %struct.qlnxr_pbl*, %struct.qlnxr_pbl** %12, align 8
  %85 = getelementptr inbounds %struct.qlnxr_pbl, %struct.qlnxr_pbl* %84, i32 0, i32 0
  %86 = load i64, i64* %85, align 8
  %87 = inttoptr i64 %86 to %struct.regpair*
  store %struct.regpair* %87, %struct.regpair** %11, align 8
  store i32 0, i32* %9, align 4
  br label %88

88:                                               ; preds = %81, %72
  br label %89

89:                                               ; preds = %88
  %90 = load i32, i32* %7, align 4
  %91 = add nsw i32 %90, 1
  store i32 %91, i32* %7, align 4
  br label %29

92:                                               ; preds = %29
  %93 = load i32*, i32** %14, align 8
  %94 = call i32 @QL_DPRINT12(i32* %93, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  br label %95

95:                                               ; preds = %92, %71
  ret void
}

declare dso_local i32 @QL_DPRINT12(i32*, i8*) #1

declare dso_local i8* @cpu_to_le32(i32) #1

declare dso_local i64 @upper_32_bits(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
